[package]
name = "rgx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
criterion = "0.4"
termion = "1.5"
tui = { version = "0.19", default-features = false, features = ['termion'] }

[[bench]]
name = "filtering_benchmark"
harness = false
